# algorithm_challenges

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: CMakeLists.txt  main.cpp  main.rs
src/algorithms/: CMakeLists.txt  algorithms.cpp  algorithms.h  binary_search.cpp  binary_search.h  binary_search.rs  bubble_sort.cpp  bubble_sort.h  bubble_sort.rs  insertion_sort.rs  mod.rs  selection_sort.rs
src/games/: CMakeLists.txt  binary_search_number.cpp  binary_search_number.h  bubble_sort_vector.cpp  bubble_sort_vector.h  find_number_in_prime_vector.rs  find_number_with_binary_search.rs  games.cpp  games.h  guess_number_with_binary_search.rs  inser_u32_with_insertion_sort.rs  mod.rs  sort_vec_with_bubble_sort.rs  sort_vec_with_selection_sort.rs
src/guess/: mod.rs
src/utils/: CMakeLists.txt  mod.rs  range.rs  terminal.cpp  terminal.h  terminal.rs  types.cpp  utils.cpp  utils.h
src/vector/: mod.rs
